--- a/loadingscreen.html
+++ b/loadingscreen.html
@@ -62,30 +62,22 @@
   </style>
 </head>
 <body>
-  <h1>Loading...</h1>
+  <h1>Project Under Construction...</h1>
 
   <div class="progress-container">
     <div id="progressBar" class="progress-bar"></div>
   </div>
 
-  <div id="percentage" class="percentage">0%</div>
+  <div id="percentage" class="percentage">27%</div>
 
-  <button onclick="increaseProgress()">Increase 10%</button>
 
   <script>
-    let progress = 0;
 
-    // You can call this function from anywhere to manually set the percentage
-    function setProgress(value) {
-      progress = Math.min(100, Math.max(0, value)); // clamp between 0 and 100
-      document.getElementById("progressBar").style.width = progress + "%";
-      document.getElementById("percentage").innerText = progress + "%";
-    }
+    let progress = 27;
+    document.getElementById("progressBar").style.width = progress + "%";
+    document.getElementById("percentage").innerText = progress + "%";
 
-    // Example button logic
-    function increaseProgress() {
-      setProgress(progress + 10);
-    }
+    
 
     // Example: auto-load demo (comment this out if not needed)
     // let interval = setInterval(() => {
