--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div id="info">
         <strong>Interactive Classroom</strong><br>
         • Click computer screen to explore<br>
-        • Click blackboard to view from back<br>
-        • Click filing cabinet drawers<br>
+        • Click blackboard to get a closer view<br>
+        • Click filing cabinets for credentials<br>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -820,7 +820,7 @@
                 <div style="padding: 20px; height: calc(100% - 100px); overflow-y: auto;">
                     <h2 style="margin-top: 0; font-size: 20px;">📁 My Documents</h2>
                     <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px;">
-                        <a href="YOUR_RESUME_LINK" target="_blank" style="text-decoration: none; color: white;">
+                        <a href="resume.html" target="_blank" style="text-decoration: none; color: white;">
                             <div style="text-align: center; cursor: pointer; padding: 10px; border-radius: 5px; background: rgba(255,255,255,0.1);" onmouseover="this.style.background='rgba(255,255,255,0.2)'" onmouseout="this.style.background='rgba(255,255,255,0.1)'">
                                 <img src="images/resume_img.png" style="width: 40px; height: 40px; object-fit: contain;" onerror="this.outerHTML='<div style=\\'font-size: 40px;\\'>📄</div>'">
                                 <div style="font-size: 12px; margin-top: 5px;">Resume</div>
