--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div id="info">
         <strong>Interactive Classroom</strong><br>
-        • Click computer screen to explore<br>
+        • Click front computer screen to explore<br>
         • Click blackboard to get a closer view<br>
         • Click filing cabinets for credentials<br>
     </div>
