Edited IT job details

--- a/index.html
+++ b/index.html
@@ -772,11 +772,10 @@
                     <div style="padding: 20px; line-height: 1.8;">
                         <h3>IT Support Technician</h3>
                         <p><strong>Adiventus</strong> | New Hamburg, ON | <em>Aug 2025 – Present</em><br>
-                        • Diagnosed and resolved hardware and software issues across Windows and Linux systems.<br>
+                        • Diagnosed and resolved hardware and software issues across Windows<br>
                         • Installed, updated, and configured applications ensuring compatibility with existing systems.<br>
                         • Automated repetitive work using Python and Bash scripts.<br>
                         • Designed and maintained small-scale MySQL databases for internal reporting and tracking.<br>
-                        • Collaborated with senior IT staff to document solutions and improve troubleshooting workflows.
                         </p>
                         
 
