edited resume html details

--- a/resume.html
+++ b/resume.html
@@ -96,11 +96,10 @@
     </div>
     <div class="subinfo"><span>New Hamburg, ON</span></div>
     <ul>
-      <li>Diagnosed and resolved hardware and software issues across Windows and Linux systems.</li>
+      <li>Diagnosed and resolved hardware and software issues across Windows</li>
       <li>Installed, updated, and configured software applications while ensuring compatibility with existing systems.</li>
       <li>Developed automation scripts in Python and Bash to streamline tedious tasks.</li>
       <li>Assisted in designing and maintaining MySQL databases for internal tracking and reporting.</li>
-      <li>Collaborated with senior IT staff to improve troubleshooting workflows and document solutions.</li>
     </ul>
 
     <div class="position">
