--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
                         </a>
                         <a href="loadingscreen.html" target="_blank" style="text-decoration: none; color: white;">
                             <div style="text-align: center; cursor: pointer; padding: 10px; border-radius: 5px; background: rgba(255,255,255,0.1);" onmouseover="this.style.background='rgba(255,255,255,0.2)'" onmouseout="this.style.background='rgba(255,255,255,0.1)'">
-                                <img src="images/tech-learn.png" style="width: 40px; height: 40px; object-fit: contain;" onerror="this.outerHTML='<div style=\\'font-size: 40px;\\'>💻</div>'">
+                                <img src="images/graduation-cap.jpg" style="width: 40px; height: 40px; object-fit: contain;" onerror="this.outerHTML='<div style=\\'font-size: 40px;\\'>💻</div>'">
                                 <div style="font-size: 12px; margin-top: 5px;">Learn about Tech</div>
                             </div>
                         </a>
